dataset1235/2025-2/1153765216/users/3700556413/executions/3138746197_359632665.log
== SUBMISSION (2025-08-12 18:26:30)
-- CODE: 
print(round(250/6, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6, 2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 18:27:24)
-- CODE: 
round(250/6,2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 18:36:32)
-- CODE: 
print(round(250/6, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 18:27:06)
-- CODE: 
round(250/6)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 18:27:54)
-- CODE: 
round(250/6, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 18:26:45)
-- CODE: 
print(round(250/6)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
41.67
-- ERROR:
File "XXXX", line 1
    print(round(250/6)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
